<resources>
    <string-array name="guess_hints_array">
        <item>Skip that title</item>
        <item>Show English Name</item>
        <item>Show Japanese Name</item>
        <item>Show Words from English Name</item>
        <item>Show Words from Japanese Name</item>
        <item>Show Description</item>
        <item>Show Character Name</item>
    </string-array>

    <string-array name="guess_hints_desc_array">
        <item>This title will be guessed. \nCost: %d</item>
        <item>Shows you English title of this anime. You will able to type ONLY Japanese version. \nCost: %d</item>
        <item>Shows you Japanese title of this anime. You will able to type ONLY OTHER LANGUAGE version. \nCost: %d</item>
        <item>This option will show you all words, contains in this anime's English title in random order. \nCost: %d</item>
        <item>This option will show you all words, contains in this anime's Japanese title in random order. \nCost: %d</item>
        <item>Shows you a description of this anime. \nCost: %d</item>
        <item>Shows you name of displayed characters. \nCost: %d</item>
    </string-array>

    <string-array name="op_hints_array">
        <item>Skip that opening</item>
        <item>Show song name</item>
        <item>Show art</item>
        <item>Show description</item>
    </string-array>

    <string-array name="op_hints_desc_array">
        <item>Cost: %d</item>
        <item>Shows you name of this song.\nCost: %d</item>
        <item>Will be shown art from this anime/manga.\nCost: %d</item>
        <item>Will be shown description of this anime/manga.\nCost: %d</item>
    </string-array>

    <string name="app_name">Guess The Anime</string>
    <string name="guess_wrong">Wrong answer!</string>
    <string name="guess_hint_title">Title…</string>
    <string name="enter" translatable="false">ENTER</string>
    <string name="guess_true">True! You have received %d points!</string>
    <string name="main_reset_title">Delete progress</string>
    <string name="main_reset_message">Do You really want to delete all the progress?</string>
    <string name="main_delete_fail">FIle has not deleted!</string>
    <string name="main_delete_suc">Deleting successful</string>
    <string name="guess_next">Next</string>
    <string name="guess_lol">Lol, how did you done that?</string>
    <string name="screenshot">Screenshot</string>
    <string name="guess_activity_title">Score: %d | Number: %d</string>
    <string name="guess_end_title">That\'s all… For now!</string>
    <string name="guess_end_message">Watch for updates, which will add more titles!</string>
    <string name="guess_menu_hints">Hints…</string>
    <string name="guess_menu_info">About this title…</string>
    <string name="guess_hints_error_guessed">This anime has already guessed!</string>
    <string name="guess_hints_purchase">Purchase</string>
    <string name="guess_hints_error_nopoints">You don\'t have enough points!</string>
    <string name="guess_hints_content_prefix">You now can access this hint for free for this anime.\n\n%s</string>
    <string name="guess_hints_error_titlenotexist">ERROR: Title in this language does not exist</string>
    <string name="guess_hints_error_descnotexist">ERROR: Description in your language and in english does not exists</string>
    <string name="guess_hints_error_charnotexist">ERROR: Characters are not defined for this art</string>
    <string name="guess_error_wronglang">Incorrect language! You must write answer on another.</string>
    <string name="reward_fail">Video has failed to load</string>
    <string name="main_reward">Get reward</string>
    <string name="main_reset">Reset profile</string>
    <string name="info_titles">Titles</string>
    <string name="info_desc">Description</string>
    <string name="info_chars">Characters</string>
    <string name="guess_info_error_guessed">You must guess this title first!</string>
    <string name="info_showall">Show All</string>
    <string name="info_showall_hide">Hide</string>
    <string name="info_descnotex">~Description is not defined~</string>
    <string name="info_charsdoesnotex">~Characters is not defined or not present on art~</string>
    <string name="menu_art">By art</string>
    <string name="menu_op">By Opening</string>
    <string name="op_hint">Title.. (NOT song!)</string>
    <string name="op_title">OP %d/%d | Score: %d</string>
    <string name="menu_score">Score: %d</string>
    <string name="op_truebut">True, but You have already guessed it before..</string>
    <string name="op_loading">Downloading song…</string>
    <string name="op_err">An error accrued(\nTry to check your internet connection</string>
    <string name="iconcredit" translatable="false">Icons made by Freepik from www.flaticon.com is licensed by Creative Commons 3.0 BY</string>
    <string name="op_skip">Skip</string>
    <string name="guess_hints_showad">You can earn some points by watching AD.</string>
</resources>
