<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	xmlns:ads="http://schemas.android.com/apk/res-auto"
	android:layout_centerHorizontal="true">
	<LinearLayout
		android:id="@+id/info_body"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:gravity="center_horizontal"
		android:orientation="vertical">

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:gravity="center"
			android:text="@string/info_titles"
			android:textAppearance="@android:style/TextAppearance.DeviceDefault.WindowTitle"
			android:textColor="@android:color/black" />

		<TextView
			android:id="@+id/info_titles"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="center"
			android:paddingHorizontal="5dp" />

		<ToggleButton
			android:id="@+id/info_showall"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:checked="false"
			android:text="@string/info_showall"
			android:textOff="@string/info_showall"
			android:textOn="@string/info_showall_hide" />
		<com.google.android.gms.ads.AdView
			android:id="@+id/info_ad"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			ads:adSize="BANNER"
			ads:adUnitId="ca-app-pub-7799305268524604/9932752075" />

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:gravity="center"
			android:text="@string/info_desc"
			android:textAppearance="@android:style/TextAppearance.DeviceDefault.WindowTitle"
			android:textColor="@android:color/black" />

		<TextView
			android:id="@+id/info_desc"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="center"
			android:paddingHorizontal="5dp" />

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="center"
			android:text="@string/info_chars"
			android:textAppearance="@android:style/TextAppearance.DeviceDefault.WindowTitle"
			android:textColor="@android:color/black" />

		<TextView
			android:id="@+id/info_chars"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="center"
			android:paddingHorizontal="5dp" />
	</LinearLayout>
</ScrollView>
