<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ru.zont.guesstheanime.MenuActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <Button
            android:id="@+id/menu_art"
            style="@android:style/Widget.DeviceDefault.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:text="@string/menu_art"
            android:textColor="@android:color/black" />

        <Button
            android:id="@+id/menu_op"
            style="@android:style/Widget.DeviceDefault.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:text="@string/menu_op"
            android:textColor="@android:color/black" />
    </LinearLayout>

    <com.google.android.gms.ads.AdView
        android:id="@+id/menu_ad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:adSize="BANNER"
        app:adUnitId="ca-app-pub-7799305268524604/5201726615" />

    <TextView
        android:id="@+id/menu_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/menu_score" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/menu_ad"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/iconcredit" />

</RelativeLayout>
