<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.gms.ads.AdView
        android:id="@+id/guess_ad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-7799305268524604/3241466626"/>

    <LinearLayout
        android:id="@+id/guess_titleLay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/guess_ad"
        android:orientation="horizontal"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/guess_resultO"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text=""
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small" />

            <TextView
                android:id="@+id/guess_result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text=""
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.WindowTitle" />
        </LinearLayout>

        <Button
            android:id="@+id/guess_next"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:onClick="next"
            android:text="@string/guess_next" />

    </LinearLayout>

    <ImageView
        android:id="@+id/guess_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/guess_input_lay"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/guess_titleLay"
        ads:srcCompat="@mipmap/ic_launcher"
        android:contentDescription="@string/screenshot" />

    <LinearLayout
        android:id="@+id/guess_input_lay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/guess_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/guess_hint_title"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/guess_ok"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:onClick="enter"
            android:text="@string/enter" />
    </LinearLayout>


</RelativeLayout>
